src/component/็Hero/Hero.module.css
.hero_wrapper {
  height: 500px;
  overflow: hidden; /* กันบัคcss */

  & .container {
    max-width: 1170px;
    margin: 0 auto;

    & .hero_con {
      display: flex;
      justify-content: space-between;
      margin-top: 110px;

      & .text_1 {
        font-size: 32px;
      }

      & .text_2 {
        font-size: 64px;
        font-weight: bold;
        color: #9AB17A;
      }

      & .text_3 {
        font-size: 32px;
      }

      & .text_4 {
        font-size: 16;
        margin-top: 25px;
      }

      & .hero_socail {
        display: flex;
        list-style: none;
        margin-top: 25px;

        & li {
          margin-right: 10px;

          & svg {
            width: 32px;
            height: 32px;
            color: #333;
          }
        }
      }

      & .hero_img {
        width: 300px;
        height: 300px;
        border-radius: 100%;
        background-image: url("src/images/35058E94-7F2F-4AB6-97FA-1986909FABA9.jpg");
        background-size: cover;
        background-position: center;
        margin-right: 120px;
      }
    }
  }
}

@media screen and (max-width: 480px) {
  .hero_wrapper {
    height: auto;

    & .hero_con {
      flex-direction: column;
      margin: 50px 0;
      padding: 20px;

      & .hero_img,
      & .hero_info {
        width: 100% !important;
      }
    }
  }
}

